--- a/in-lab-examples/puinote-lab01/puinote-start/css/style.css
+++ b/in-lab-examples/puinote-lab01/puinote-start/css/style.css
@@ -1,10 +1,33 @@
+body {
+    font-family: Roboto, Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: #939393;
+
+    background-color: #191919;
+}
+
 .notecard {
     width: 450px;
-    height: 150px;
+    height: auto;
     border-radius: 8px;
     background-color: green;
     margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
+    box-sizing: border-box;
   }
+
+.note-title {
+    color: #dddddd;
+    font-size: 18px;
+    font-weight: 500;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}  
+
+.notecard-thumbnail {
+    width: 70px;
+    height: 70px;
+    border-radius: 5px;
+}
