--- a/in-lab-examples/puinote-lab02/example-media-queries/style.css
+++ b/in-lab-examples/puinote-lab02/example-media-queries/style.css
@@ -17,7 +17,16 @@ body {
 }
 
 .column.responsive {
+  width: 100%;
+  display: block; 
 }
 
 .container.responsive {
+  flex-wrap: wrap;
+}
+
+@media only screen and (max-width: 600px) {
+  .column.responsive {
+    display: none;
+  }
 }
