--- a/in-lab-examples/puinote-lab02/puinote-start/css/style.css
+++ b/in-lab-examples/puinote-lab02/puinote-start/css/style.css
@@ -17,7 +17,6 @@ body {
 
 /* ---------- NOTECARD ------------------------------------------------------ */
 .notecard {
-
   box-sizing: border-box;
   width: 450px;
 
@@ -29,8 +28,26 @@ body {
 
   border-radius: 8px;
   background-color: #212121;
+
+  display: flex;
+  flex-direction: row;
 }
 
+.notecard-left{
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.notecard-right{
+  width: 30px;
+  background-color: green;
+  flex-shrink: 0;
+}
+
+.notecard-content{
+  display: flex;
+}
 
 .notecard-thumbnail {
   /* We want our image to fit into a 70x70 px square. */
@@ -41,7 +58,6 @@ body {
   border-radius: 5px;
 }
 
-
 .note-title {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -51,27 +67,16 @@ body {
   color: #dddddd;
 }
 
-
-.btn-delete {
-  width: 30px;
-  height: 30px;
-
-  margin-top: 15px;
-  padding: 0;
-
+.date{
+  margin-top: 10px;
+  color: gray; 
   font-size: 14px;
-  font-weight: 700;
-
-  background-color: #212121;
-  border: 2px solid #595959;
-  border-radius: 5px;
-  color: #595959;
-
-  cursor: pointer;
 }
 
-.btn-delete:hover {
-  color: #dddddd;
-  background-color: #393939;
-  border: 2px solid #dddddd;
+.notecard-text{
+  margin-left: 20px;
+  width: calc(100% - 70px - 20px);
+
+  display: flex;
+  flex-direction: column;
 }
